unpackaged/objects/Widget__c.object
<CustomObject>
    <fields>
        <fullName>Install_Notes__c</fullName>
        <label>Install Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <label>Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Widgets</relationshipLabel>
        <relationshipName>Widgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchased_Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purchased Warranty?</label>
        <type>Checkbox</type>
    </fields>
    <label>Widget</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>W-{00000}</displayFormat>
        <label>Widget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Widgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>